added navigation buttons

--- a/index.html
+++ b/index.html
@@ -12,16 +12,22 @@
     <link rel="icon" href="./img/pizzaicon.jpg" type="img/jpg">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="./js/script.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 <div class="Container">
         <div class="HEADING">
             <h1>Welcome to JOON'S PIZZA!</h1>
         </div>
-     
+        <nav>
+            <a class="click-me" href="./index.html">Home</a>
+            <a class="click-me" href="./menu.html">Menu</a>
+        </nav>
+    
 <div class="specials"> 
  <h3>OUR HOUSE  SPECIALS</h3>
  <P> build your  own pizza here.</P>
+ <a class="build" href="./menu.html">Menu</a>
 </div>
 <!--attach a button for menu here-->
 <div class="About">
