added the abou  us  page

--- a/menu.html
+++ b/menu.html
@@ -15,11 +15,15 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body> 
-<nav>
-        <a class="active" href="./index.html">Home</a>
-        <a  href="./menu.html">Menu</a>
-
-</nav>
+    <div class="Container">
+        <div class="HEADING">
+            <h1>JOON'S PIZZA</h1>
+    <nav>
+        <a class="click-me" href="./index.html">Home</a>
+        <a class="click-me" href="./menu.html">Menu</a>
+        <a href="click-me"  href="./about.html">About Us</a>
+    </nav>
+<section id="menu">
     <div class="menu">
                 <div id="sizetable">
                     <h3 class="tablehead">Choose Size:</h3>
@@ -121,8 +125,36 @@
     <div class="Delivery">
         <p>Choose your Delivery option</p>
     </div>
-
-
+</section>
+<section id= "special">
+        <h1 class="text-center">House Special</h1>
+        <div class="card-deck text-center">
+            <div class="card">
+                <img src="./img/bulgoggi.jpg" class="img-fluid" alt="">
+                <div class="card-1">
+                    <p class="ptag font-weight-bold text-uppercase">Bulgoggi pizza </p>
+                </div> 
+            </div>
+            <div class="card">
+                <img src="./img/corn.png" class="img-fluid" alt="">
+                <div class="card-1">
+                    <p class="ptag font-weight-bold text-uppercase">Corn pizza</p>
+                </div>
+            </div>
+            <div class="card">
+                <img src="./img/asorted.jpeg" class="img-fluid" alt="">
+                <div class="card-1">
+                    <p class="ptag font-weight-bold text-uppercase">Assorted pizza</p>
+                </div>
+            </div>
+            <div class="card">
+                <img src="./img/vegpizza.jpg" class="img-fluid" alt="">
+                <div class="card-1">
+                    <p class="ptag font-weight-bold text-uppercase">Veg pizza</p>
+                </div>
+            </div>
+        </div>
+</section>
   <script src="./js/jquery-3.6.0.js"></script>
 </body>
 </html>
