--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JOON'S PIZZA</title>
+    <title>About</title>
     <link rel="stylesheet" href="./css/fontawesome.css">
     <link rel="stylesheet" href="./css/bootstrap.css">
     <link rel="stylesheet" href="link href='https://fonts.googleapis.com/css?family=Sofia' rel='stylesheet'">
@@ -15,38 +15,23 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-<div class="Container">
+    <div class="Container">
         <div class="HEADING">
             <h1>JOON'S PIZZA</h1>
         </div>
-        <nav>
-            <a class="click-me" href="./index.html">Home</a>
-            <a class="click-me" href="./menu.html">Menu</a>
-            <a class="click-me"  href="./about.html">About Us</a>
-        </nav>
-<div class="specials"> 
- <h3>OUR HOUSE  SPECIALS</h3>
- <P> build your  own pizza here.</P>
- <a class="build" href="./menu.html">Menu</a>
-</div>
+    <nav>
+        <a class="click-me" href="./index.html">Home</a>
+        <a class="click-me" href="./menu.html">Menu</a>
+        <a href="click-me"  href="./about.html">About Us</a>
+    </nav>
+    <section id="About">
+        <h4>About  JOON'S PIZZA</h4> 
+        <p> <span>JOON'S PIZZA</span> is  an  ode to  my  love  for  joon  and  food as a whole.<br> Joon likes  to  eat  very  healthy  food but  occassioally  likes  to  purge on  cheesy foods.  our menu  is  structured for all  , from  vegans to  meat  lovers. 
+    House specials are  there  for  us who  cannit decide on what  we want on our pizza. <br>
+     the Pizzeria was found on  September 13th 2019. the very  day  Joon had his  birthday.</p>
+     <h3>Meet  the team </h3>
 
-<!--attach a button for menu here-->
-
-
-
-<!--add about  me section here coplete  with  different  fontypes and a back ground-->
-</div>
-
-    <div class="Contact">
-        <p>leave us a message here</p>
-    </div>
-<!--add a form here-->
-</div>
-
-<!--CREATE SECTONS TO  TYLE DIFFERENTLY, ADD IMAGES FOR BACKGROUNDS AND PIZZAS-->
-  <script src="./js/jquery-3.6.0.js"></script>
-
-
-
+     
+    </section>
 </body>
 </html>
