--- a/menu.html
+++ b/menu.html
@@ -21,7 +21,8 @@
     <nav>
         <a class="click-me" href="./index.html">Home</a>
         <a class="click-me" href="./menu.html">Menu</a>
-        <a href="click-me"  href="./about.html">About Us</a>
+        <a class="click-me"  href="./about.html">About Us</a>
+        <a  class="click-me" href="./contact.html">Contact Us</a>
     </nav>
 <section id="menu">
     <div class="menu">
