--- a/index.html
+++ b/index.html
@@ -118,6 +118,16 @@
       </form>
 </section>
 <hr>
+<footer>
+    <p>JOON'S PIZZA</p>   
+    <P>2021</P>
+    <br>
+    <a href="#" class="fa fa-facebook"></a>
+    <a href="#" class="fa fa-twitter"></a>
+    <a href="#" class="fa fa-google"></a>
+    <a href="#" class="fa fa-instagram"></a> 
+    <br> 
+</footer>
 
         <script src="./js/jquery-3.6.0.js"></script>
 </body>
