--- a/contact.html
+++ b/contact.html
@@ -26,16 +26,16 @@
             <a class="click-me" href="./contact.html">Contact Us</a>
         </nav>
 
-<div class="container">
+<div id="contact">
   <form action="action_page.php">
 
-    <label for="fname">First Name</label>
+    <label for="fname"></label>
     <input type="text" id="fname" name="firstname" placeholder="Your name..">
 
-    <label for="lname">Last Name</label>
+    <label for="lname"></label>
     <input type="text" id="lname" name="lastname" placeholder="Your last name..">
 
-    <label for="subject">MESSAGE </label>
+    <label for="subject"> </label>
     <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
 
     <input type="submit" value="Submit">
