added new sectionS

--- a/index.html
+++ b/index.html
@@ -24,7 +24,21 @@
             <a class="click-me" href="./menu.html">Menu</a>
             <a class="click-me"  href="./about.html">About Us</a>
             <a class="click-me" href="./contact.html">Contact Us</a>
-          </div>
+            <div class="login-container">
+                <form action="/action_page.php">
+                <input type="text" placeholder="Username" name="username">
+                <input type="text" placeholder="Password" name="psw">
+                <button type="submit">Login</button>
+                </form>
+            </div>
+        </div>
+</div>
+<section id="new">
+    <p>Introducing pizza and drink  special</p>
+    <br>
+    <p> pop-up specials every friday hurry and book.</p>
+    <img src="./img/combo.jpg" alt="special" srcset="">
+</section>
 <section id="slide">
     <h2 style="text-align:center">Pizza Gallery</h2>
     <div class="container">
@@ -94,7 +108,6 @@
           <h1>Sign Up</h1>
           <p>create an account.</p>
           <hr>
-      
           <label for="email"><b></b></label>
           <input type="text" placeholder="EMAIL" name="email" required>
       
